--- a/style.css
+++ b/style.css
@@ -32,10 +32,59 @@ div h1{
     color: darkmagenta;
 } 
 
+.modal-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container h1{
     color: darkblue;
 } 
- 
+
+.modal{
+    background-color: black;
+    width: 20rem;
+    margin: 3rem;
+    padding: 1rem;
+    border-radius: 10px;
+}
+
+.modal h1{
+    color: white;
+    font-size: 1.2rem;
+}
+
+.modal button{
+    color: white;
+    background-color: pink;
+    padding: 0.5rem 0.8rem;
+    border: none;
+    border-radius: 100%;
+    position: relative;
+    top: -13rem;
+    left: 17rem;
+}
+
+.box-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.box{
+    background-color: pink;
+    color:white
+    width: 10rem;
+    display: flex;
+    align-items: center;justify-content: center;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 4rem;
+}
+
 #special-title{
     color: darkred;
     font-style: italic;
