--- a/style.css
+++ b/style.css
@@ -85,6 +85,13 @@ div h1{
     padding: 4rem;
 }
 
+.box:nth-child(2){
+    background-color: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 #special-title{
     color: darkred;
     font-style: italic;
